[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/new_characters/Audio Manager.gd" type="Script" id=1]
[ext_resource path="res://Sounds/Audio/footstep_concrete_003.ogg" type="AudioStream" id=2]
[ext_resource path="res://Assets/new_characters/Sounds/female_win.mp3" type="AudioStream" id=3]
[ext_resource path="res://Assets/new_characters/Sounds/male_win2.mp3" type="AudioStream" id=4]
[ext_resource path="res://Assets/new_characters/Sounds/defeat_female.mp3" type="AudioStream" id=5]
[ext_resource path="res://Assets/new_characters/Sounds/defeat_male.mp3" type="AudioStream" id=6]

[node name="AudioFeedback" type="Node"]
script = ExtResource( 1 )

[node name="Walk" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -6.0
pitch_scale = 0.7

[node name="Win_female" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="Win_male" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="Defeat_female" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="Defeat_male" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
